@@ -11,6 +11,12 @@ Package author: Matthew J. Weaver
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-03
+2014-12-09 Matt Weaver
+- added more histograms for dump to root file
+- added support for TimeTool::ConfigV2, DataV2 data types and two ROI analysis
+- removed need to specify empty ROIs, ipm_get_key
+	
 Tag: V00-01-02 
 2014-10-23 David Schneider
 - change config files to use eventcode_nobeam rather than eventcode_bykik (fix bug
